--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
+# Web framework
 flask==2.3.3
 flask-restful==0.3.10
 flask-cors==4.0.0
-scikit-learn==1.3.0
-pandas==2.0.3
-numpy==1.24.3
-joblib==1.3.2
 gunicorn==21.2.0
+
+# ML libraries (pinned for compatibility)
+scikit-learn==1.3.0
+numpy==1.24.3
+pandas==2.0.3
+joblib==1.3.2
+
+# Alternative: Use these versions if above don't work
+# scikit-learn==1.2.2
+# numpy==1.23.5
+# pandas==1.5.3
